# machine-learning-api

./: .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile_doc  README.md  auto_doc.py  index.html  mkdocs.yml  versions.json
python/: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
python/hsml/: __init__.py  component_config.py  connection.py  constants.py  decorators.py  deployable_component.py  deployable_component_logs.py  deployment.py  inference_batcher.py  inference_batcher_config.py  inference_endpoint.py  inference_logger.py  inference_logger_config.py  kafka_topic.py  kafka_topic_config.py  model.py  model_registry.py  model_schema.py  model_serving.py  predictor.py  predictor_config.py  predictor_specification.py  predictor_state.py  predictor_state_condition.py  predictor_state_internal.py  resources.py  resources_config.py  schema.py  serving_component.py  tag.py  transformer.py  transformer_config.py  util.py  version.py
python/hsml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/hsml/client/: __init__.py  auth.py  base.py  exceptions.py  external.py  grpc_inference_client.py  hopsworks.py
python/hsml/client/hopsworks/: base.py  external.py  internal.py
python/hsml/client/istio/: __init__.py  base.py  external.py  internal.py
python/hsml/client/istio/grpc/: errors.py  exceptions.py  inference_client.py
python/hsml/client/istio/grpc/proto/: __init__.py  grpc_predict_v2.proto  grpc_predict_v2_pb2.py  grpc_predict_v2_pb2.pyi  (+1 more)
python/hsml/client/istio/utils/: infer_type.py  numpy_codec.py
python/hsml/client/protocol/: errors.py  exceptions.py  infer_type.py
python/hsml/client/protocol/grpc/: grpc_predict_v2_pb2.py  grpc_predict_v2_pb2.pyi  grpc_predict_v2_pb2_grpc.py
python/hsml/core/: dataset_api.py  explicit_provenance.py  model_api.py  model_registry_api.py  model_serving_api.py  models_api.py  native_hdfs_api.py  serving_api.py
python/hsml/engine/: __init__.py  hopsworks_engine.py  local_engine.py  model_engine.py  models_engine.py  serving_engine.py
python/hsml/python/: model.py  predictor.py  predictor_config.py  signature.py
python/hsml/sklearn/: model.py  predictor.py  predictor_config.py  signature.py
python/hsml/tensorflow/: model.py  predictor.py  predictor_config.py  signature.py
python/hsml/torch/: model.py  predictor.py  predictor_config.py  signature.py
python/hsml/utils/: column.py  columnar_schema.py  columnar_signature.py  model_schema.py  model_signature_spec.py  schema.py  signature.py  tensor.py  tensor_schema.py  tensor_signature.py
python/hsml/utils/schema/: column.py  columnar_schema.py  tensor.py  tensor_schema.py
python/tests/: conftest.py  test_connection.py  test_constants.py  test_decorators.py  test_deployable_component.py  test_deployable_component_logs.py  test_deployment.py  test_explicit_provenance.py  test_inference_batcher.py  test_inference_endpoint.py  test_inference_logger.py  test_kafka_topic.py  test_model.py  test_model_schema.py  test_predictor.py  test_predictor_state.py  test_predictor_state_condition.py  test_resources.py  test_schema.py  test_tag.py  test_transformer.py  test_util.py
python/tests/fixtures/: backend_fixtures.py  inference_batcher_fixtures.json  inference_endpoint_fixtures.json  inference_logger_fixtures.json  kafka_topic_fixtures.json  model_fixtures.json  model_fixtures.py  predictor_fixtures.json  resources_fixtures.json  tag_fixtures.json  transformer_fixtures.json
python/tests/hsml/core/: tfdata_engine_test.py
python/tests/utils/schema/: test_column.py  test_columnar_schema.py  test_tensor.py  test_tensor_schema.py
(+279 files in other folders)
